<resources>
    <string name="app_name">ClementAndroidERestaurant</string>
    <string name="hello_world">Hello ISEN</string>
    <string name="defaultIngredient" />
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="entrees">Entrées</string>
    <string name="plats">Plats</string>
    <string name="deserts">Déserts</string>
    <string name="defaultQuantity">1</string>

    <string name="plusIcon">+</string>

    <string name="minesIcon">-</string>

    <string name="priceDefaut">0</string>

    <string name="ble_scan_play">Lancer le scan BLE</string>
    <string name="ble_scan_pause">Scan BLE en cours</string>
    <string name="ble_scan_device_error">Le scan est impossible sur cet appareil</string>
    <string name="ble_device_disconnected">connection</string>
    <string name="ble_device_connected">connection</string>
</resources>